Renamed extension from php to html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header">
 
         <div class="logo">
-            <img src="images/logo.png" alt="My logo"> Sms Encryption
+            <img src="images/logo.png" alt="My logo"> SMS Encryption
         </div>
 
         <div class="navbar">
@@ -49,7 +49,7 @@
 
         <div class="col-2">
             <div class="box text">
-                <h1>Verification SMS</h1>
+                <h1>SMS Encryption</h1>
                 <h3>Increase the registration conversion rate and speed up your business process</h3>
                 <h5>Support a variety of languages, help global users to carry out security verification through the fastest way, retain every customer, let customers feel the enterprise's efficient service, promote the business development of the enterprise.</h5>
 
@@ -67,6 +67,41 @@
 
     <!-- End Banner Section  -->
 
+    <!-- Start Support Section  -->
+
+    <section id="support" class="support pad">
+
+        <div class="section-header">
+            <h1>Leading platform advantages and <br>professional guarantee</h1>
+        </div>
+
+        <div class="support-container">
+            <div class="box">
+                <img src="images/icon-1.svg" alt="icon 1">
+                <h2>Convenient log in</h2>
+                <p>Dynamic authentication improves retention rate by eliminating the need to remember complex passwords</p>
+            </div>
+            <div class="box">
+                <img src="images/icon-2.svg" alt="icon 2">
+                <h2>Ensure safety</h2>
+                <p>Sensitive operations are confirmed and authenticated to reduce malicious operations by illegal users and ensure account security</p>
+            </div>
+            <div class="box">
+                <img src="images/icon-3.svg" alt="icon 3">
+                <h2>Identity authentication</h2>
+                <p>Guarantee the authenticity of registration, mobile phone number binding, retrieve password, and avoid repeated data.</p>
+            </div>
+            <div class="box">
+                <img src="images/icon-4.svg" alt="icon 4">
+                <h2>Information confirmation</h2>
+                <p>Important information authentication, such as information change, payment confirmation, activity confirmation, to ensure information security</p>
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- End Support Section  -->
     
 </body>
 <script src="js/script.js"></script>
