Moved to enterprise section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,32 @@
     </section>
 
     <!-- End Support Section  -->
+
+    <!-- Start Enterprise Section  -->
+
+    <div class="seperator"></div>
+
+    <section id="enterprise" class="enterprise pad">      
+
+        <div class="col-2">           
+
+            <div class="box img">
+                <img src="images/enterprise.png" />
+            </div>
+            <div class="box text">
+                <h1>SMS Encryption</h1>
+                <h3>Increase the registration conversion rate and speed up your business process</h3>
+                <h5>Support a variety of languages, help global users to carry out security verification through the fastest way, retain every customer, let customers feel the enterprise's efficient service, promote the business development of the enterprise.</h5>
+
+                <div class="text-footer">
+                    <img src="images/google.png" alt="">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- End Enterprise Section  -->
     
 </body>
 <script src="js/script.js"></script>
