Moved to enterprise section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         </div>
 
         <div class="navbar">
-            <a href="">Home</a>
-            <a href="">Product</a>
-            <a href="">Affiliate Marketing</a>
+            <a href="#banner">Home</a>
+            <a href="#support">Support</a>
+            <a href="#enterprise">Enterprise</a>
+            <a href="">Marketing</a>
             <a href="">Support Us</a>
             <!-- <a href="">Contact</a> -->
         </div>
