--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="support-container">
-            <div class="box active">
+            <div class="box">
                 <img src="images/icon-1.svg" alt="icon 1">
                 <h2>Convenient log in</h2>
                 <p>Dynamic authentication improves retention rate by eliminating the need to remember complex passwords</p>
