Site font size increased

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
     <section id="support" class="support pad">
 
         <div class="section-header">
-            <h1>Leading platform advantages and <br>professional guarantee</h1>
+            <h1>Leading platform</h1>
+            <p>Stable and reliable technical support to help you efficiently serve global customers</p>
         </div>
 
         <div class="support-container">
@@ -96,7 +97,7 @@
             <div class="box">
                 <img src="images/icon-4.svg" alt="icon 4">
                 <h2>Information confirmation</h2>
-                <p>Important information authentication, such as information change, payment confirmation, activity confirmation, to ensure information security</p>
+                <p>Information authentication, such as information change, payment confirmation, to ensure information security</p>
             </div>
 
         </div>
