Site font size increased

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="box">
                 <img src="images/icon-4.svg" alt="icon 4">
                 <h2>Information confirmation</h2>
-                <p>Information authentication, such as information change, payment confirmation, to ensure information security</p>
+                <p>Important information authentication, such as information change, payment confirmation, activity confirmation, to ensure information security</p>
             </div>
 
         </div>
