Site font size increased

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <div class="text-footer">
                     <!-- <a href="">Be a Member</a> -->
-                    <img src="images/google.png" alt="">
+                    <!-- <img src="images/google.png" alt=""> -->
                 </div>
             </div>
 
