--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h5>Support a variety of languages, help global users to carry out security verification through the fastest way, retain every customer, let customers feel the enterprise's efficient service, promote the business development of the enterprise.</h5>
 
                 <div class="text-footer">
-                    <!-- <a href="">Be a Member</a> -->
+                    <a href="">Be a Member</a>
                     <!-- <img src="images/google.png" alt=""> -->
                 </div>
             </div>
