--- a/index.html
+++ b/index.html
@@ -110,20 +110,29 @@
 
     <div class="seperator"></div>
 
-    <section id="enterprise" class="enterprise pad">      
-
+    <section id="enterprise" class="enterprise pad">    
+        <div class="ent">
+            <h3>Create more value for your enterprise</h3>
+            <p>With 15 years of international telecom operation experience, we can carry out independent research and development</p>
+            
+        </div>  
         <div class="col-2">           
 
             <div class="box img">
                 <img src="images/enterprise.png" />
             </div>
-            <div class="box text">
-                <h1>SMS Encryption</h1>
-                <h3>Increase the registration conversion rate and speed up your business process</h3>
-                <h5>Support a variety of languages, help global users to carry out security verification through the fastest way, retain every customer, let customers feel the enterprise's efficient service, promote the business development of the enterprise.</h5>
-
-                <div class="text-footer">
-                    <img src="images/google.png" alt="">
+            <div class="box">
+                <div class="box-inner">
+                    <h3>New customers through verification code</h3>
+                    <p>Provide a global stable connection SMS channel for your website and APP, quickly verify the authenticity of customers, improve the conversion rate of registration, help products to attract new customers efficiently</p>
+                </div>
+                <div class="box-inner">
+                    <h3>Product promotion</h3>
+                    <p>Analyze registered users, filter potential users, promote your products and activities to them through messages, creating more value for your enterprise</p>
+                </div>
+                <div class="box-inner">
+                    <h3>Retentive customer maintenance</h3>
+                    <p>We can send orders reminder, meeting notice, holiday blessing and so on through SMS, accurately grasp the time and events to interact with customers at key points of customer contact, and extend customer life cycle</p>
                 </div>
             </div>
         </div>
