Added copywright section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#support">Support</a>
             <a href="#enterprise">Enterprise</a>
             <a href="">Marketing</a>
-            <a href="">Support Us</a>
+            <a href="">Contact Us</a>
             <!-- <a href="">Contact</a> -->
         </div>
 
@@ -99,7 +99,6 @@
                 <h2>Information confirmation</h2>
                 <p>Important information authentication, such as information change, payment confirmation, activity confirmation, to ensure information security</p>
             </div>
-
         </div>
 
     </section>
@@ -140,6 +139,37 @@
     </section>
 
     <!-- End Enterprise Section  -->
+
+    <!-- Start Footer Section  -->
+
+    <section id="footer" class="footer pad">        
+
+        <div class="footer-container">
+            <div class="box">
+                <div class="logo">
+                    <img style="margin-left: -2rem;" src="images/logo.png" alt="My logo"> SMS Encryption
+                </div>
+            </div>
+        </div>
+        <div class="ecc">
+            <h2>Elliptic Curve Cryptography</h2>
+            <p>ECC, an alternative technique to RSA, is a powerful cryptography approach. It generates security between key pairs for public key encryption by using the mathematics of elliptic curves.</p>
+            <p>RSA does something similar with prime numbers instead of elliptic curves, but ECC has gradually been growing in popularity recently due to its smaller key size and ability to maintain security. This trend will probably continue as the demand on devices to remain secure increases due to the size of keys growing, drawing on scarce mobile resources. This is why it is so important to understand elliptic curve cryptography in context.</p>
+            <p>In contrast to RSA, ECC bases its approach to public key cryptographic systems on how elliptic curves are structured algebraically over finite fields. Therefore, ECC creates keys that are more difficult, mathematically, to crack. For this reason, ECC is considered to be the next generation implementation of public key cryptography and more secure than RSA.</p>
+        </div>
+
+        <div class="quick-links">
+            <a href="">Home</a>
+            <a href="">Support</a>
+            <a href="">Enterprise</a>
+            <a href="">Marketing</a>
+            <a href="">Contact us</a>
+        </div>
+        <div class="copywright">
+            © Copywright 2022. Developed by <a href="https://github.com/developerzion/" target="_blank">Developerzion</a>. Inspired by Onbuka
+        </div>
+
+    </section>
     
 </body>
 <script src="js/script.js"></script>
