Added copywright section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>End to End Encrption of Short Message Service (SMS) using Elliptic Curve Cryptography</title>
+    <title>Home - End to End Encrption of Short Message Service (SMS) using Elliptic Curve Cryptography</title>
 </head>
 <body>
 
@@ -23,20 +23,20 @@
             <a href="#banner">Home</a>
             <a href="#support">Support</a>
             <a href="#enterprise">Enterprise</a>
-            <a href="">Marketing</a>
-            <a href="">Contact Us</a>
+            <a href="#">Marketing</a>
+            <a href="#">Contact Us</a>
             <!-- <a href="">Contact</a> -->
         </div>
 
         <div class="auth">
-            <a href="">Login</a>
+            <a href="login.html">Login</a>
             <a href="">Free sign up</a>
         </div>
 
 
         <div class="mobile">
             <span onclick="barToggle(this)" class="fa fa-bars"></span>
-            <span class="fa fa-lock"></span>
+            <a href="login.html"><span class="fa fa-lock"></span></a>
         </div>
 
     </div>
