Added copywright section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="auth">
             <a href="login.html">Login</a>
-            <a href="">Free sign up</a>
+            <a href="signup.html">Free sign up</a>
         </div>
 
 
