--- a/signup.html
+++ b/signup.html
@@ -46,21 +46,25 @@
         </div>
         <div class="box background">
             <form action="">
-                <h1>Login</h1>
+                <h1>SignUp</h1>
 
                 <div class="fields">
                     <h2>Username</h2>
-                    <input type="text" class="form-control" placeholder="Enter username" required>
+                    <input type="text" class="form-control" placeholder="Enter your username" required>
                 </div>
                 <div class="fields">
                     <h2>Password</h2>
-                    <input type="text" class="form-control" placeholder="********" required>
+                    <input type="text" class="form-control" placeholder="Enter password">
+                </div>
+                <div class="fields">
+                    <h2>Confirm Password</h2>
+                    <input type="text" class="form-control" placeholder="Confirm password">
                 </div>
                 <div class="fields">
                     <button class="btn-log">Login</button>
                 </div>
-                <p><a href="#">Forgot your password</a></p>
-                <p>Don't have an account yet? <a href="signup.html">Sign up here.</a></p> 
+                <!-- <p><a href="#">Forgot your password</a></p> -->
+                <p>Already have an account? <a href="login.html">Login here.</a></p> 
             </form>
             <!-- <img src="images/loginBG.png" alt=""> -->
         </div>
