Working on login and signup section

--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <div class="login-container pad">
+    <div class="login-container signup-pad pad">
         <div class="box">
             <h1>Hello <br/>Welcome to SMS Encrption</h1>
             <p>Empower Every Enterprise to Connect Global users Efficiently and Achieve more</p>
@@ -47,7 +47,10 @@
         <div class="box background">
             <form action="">
                 <h1>SignUp</h1>
-
+                <div class="fields">
+                    <h2>Username</h2>
+                    <input type="text" class="form-control" placeholder="Enter your username" required>
+                </div>
                 <div class="fields">
                     <h2>Username</h2>
                     <input type="text" class="form-control" placeholder="Enter your username" required>
