Working on login and signup section

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="box background">
-            <form action="">
+            <form action="" class="login">
                 <h1>Login</h1>
 
                 <div class="fields">
@@ -62,11 +62,11 @@
                 <p><a href="#">Forgot your password</a></p>
                 <p>Don't have an account yet? <a href="signup.html">Sign up here.</a></p> 
             </form>
-            <!-- <img src="images/loginBG.png" alt=""> -->
         </div>
-        <div class="seperator">&nbsp;</div>
 
+        
     </div>
+
     
 </body>
 </html>
