--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <div class="login-container signup-pad pad">
+    <div class="login-container pad">
         <div class="box">
             <h1>Hello <br/>Welcome to SMS Encrption</h1>
             <p>Empower Every Enterprise to Connect Global users Efficiently and Achieve more</p>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="box background">
-            <form action="">
+            <form action="" class="signUp">
                 <h1>SignUp</h1>
                 <div class="fields">
                     <h2>Username</h2>
@@ -66,13 +66,10 @@
                 <div class="fields">
                     <button class="btn-log">Login</button>
                 </div>
-                <!-- <p><a href="#">Forgot your password</a></p> -->
                 <p>Already have an account? <a href="login.html">Login here.</a></p> 
             </form>
-            <!-- <img src="images/loginBG.png" alt=""> -->
-        </div>
-        <div class="seperator">&nbsp;</div>
 
+        </div>
     </div>
     
 </body>
