--- a/signup.html
+++ b/signup.html
@@ -48,20 +48,20 @@
             <form action="" class="signUp">
                 <h1>SignUp</h1>
                 <div class="fields">
-                    <h2>Username</h2>
-                    <input type="text" class="form-control" placeholder="Enter your username" required>
+                    <h2>Fullname</h2>
+                    <input type="text" name="fullname" class="form-control" placeholder="Enter your fullname" required>
                 </div>
                 <div class="fields">
                     <h2>Username</h2>
-                    <input type="text" class="form-control" placeholder="Enter your username" required>
+                    <input type="text" name="username" class="form-control" placeholder="Enter your username" required>
                 </div>
                 <div class="fields">
                     <h2>Password</h2>
-                    <input type="text" class="form-control" placeholder="Enter password">
+                    <input type="text" name="password" class="form-control" placeholder="Enter password">
                 </div>
                 <div class="fields">
                     <h2>Confirm Password</h2>
-                    <input type="text" class="form-control" placeholder="Confirm password">
+                    <input type="text" name="cpassword" class="form-control" placeholder="Confirm password">
                 </div>
                 <div class="fields">
                     <button class="btn-log">Login</button>
