--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,3 @@
-<?php
-    include "./includes/inc.php";
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,7 +45,7 @@
             </div>
         </div>
         <div class="box background">
-            <form action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']); ?>" method="POST" class="signUp">
+            <form action="" method="POST" class="signUp">
                 <h1>SignUp</h1>
                 <div class="fields">
                     <h2>Fullname</h2>
@@ -72,15 +68,6 @@
                 </div>
                 <p>Already have an account? <a href="login.php">Login here.</a></p> 
 
-                <?php
-                    if(isset($_POST['signup'])){                    
-                        
-                        $query = "INSERT INTO `tbl_client`(`fullname`, `username`, `password`) VALUES (?,?,?)";
-                        $response = $conn->signup($query);
-                        echo $response;                      
-                    }
-                    
-                ?>
             </form>
 
         </div>
