--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="mobile">
             <span onclick="barToggle(this)" class="fa fa-bars"></span>
-            <a href="login.php"><span class="fa fa-lock"></span></a>
+            <a href="login.html"><span class="fa fa-lock"></span></a>
         </div>
 
     </div>
