--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
     <div class="login-header">
         <div class="logo">
-            <a href="index.php"><img src="images/logo.png" alt="My logo"> SMS Encryption</a>
+            <a href="index.html"><img src="images/logo.png" alt="My logo"> SMS Encryption</a>
         </div>
     </div>
 
@@ -61,7 +61,7 @@
                     <button class="btn-log">Login</button>
                 </div>
                 <p><a href="#">Forgot your password</a></p>
-                <p>Don't have an account yet? <a href="signup.php">Sign up here.</a></p> 
+                <p>Don't have an account yet? <a href="signup.html">Sign up here.</a></p> 
             </form>
         </div>
 
