--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
 
     <div class="login-header">
         <div class="logo">
-            <a href="index.php"><img src="images/logo.png" alt="My logo"> SMS Encryption</a>
+            <a href="index.html"><img src="images/logo.png" alt="My logo"> SMS Encryption</a>
         </div>
     </div>
 
@@ -66,7 +66,7 @@
                 <div class="fields">
                     <button name="signup" class="btn-log">Sign Up</button>
                 </div>
-                <p>Already have an account? <a href="login.php">Login here.</a></p> 
+                <p>Already have an account? <a href="login.html">Login here.</a></p> 
 
             </form>
 
